GEODE-10263: add additional import for VMStats50 (#7637)